--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -17,10 +17,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install unittest
     - name: Test with unittest
       run: |
-        cd type_splitter && python3 -m unittest discover .
+        python3 -m unittest discover type_splitter
