Reformat generated fuzzer

--- a/automatic_fuzzing/CMakeLists.txt
+++ b/automatic_fuzzing/CMakeLists.txt
@@ -17,13 +17,13 @@ ament_target_dependencies(client
          tutorial_interfaces) 
 
 # ADDED FOR FUZZING 
-add_executable(fuzzer_device src/generated.cpp)
-ament_target_dependencies(fuzzer_device rclcpp tutorial_interfaces) 
+add_executable(generated_fuzzer src/add_two_ints_server_generated.cpp)
+ament_target_dependencies(generated_fuzzer rclcpp tutorial_interfaces) 
 
 install(TARGETS
   server
   client
-  fuzzer_device
+  generated_fuzzer
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
