--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -2,22 +2,23 @@ name: Python tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.9"
-    - name: Test with unittest
-      run: python3 ros2_automatic_fuzzer/setup.py test
-    - name: Compile all
-      run: python3 -m compileall
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Install wheel
+        run: pip install wheel
+      - name: Test with unittest
+        run: python3 ros2_automatic_fuzzer/setup.py test
+      - name: Compile all
+        run: python3 -m compileall
